Release 1.0.2 (in development)
==============================

* #482: When doing a non-exact search, match only the given type
  of object.

* #481: Apply non-exact search for Python reference targets with
  ``.name`` for modules too.

* #484: Fix crash when duplicating a parameter in an info field list.

* #487: Fix setting the default role to one provided by the
  ``oldcmarkup`` extension.

* #488: Fix crash when json-py is installed, which provides a
  ``json`` module but is incompatible to simplejson.

* #480: Fix handling of target naming in intersphinx.

* #486: Fix removal of ``!`` for all cross-reference roles.


Release 1.0.1 (Jul 27, 2010)
============================

* #470: Fix generated target names for reST domain objects; they
  are not in the same namespace.

* #266: Add Bengali language.

* #473: Fix a bug in parsing JavaScript object names.

* #474: Fix building with SingleHTMLBuilder when there is no toctree.

* Fix display names for objects linked to by intersphinx with
  explicit targets.

* Fix building with the JSON builder.

* Fix hyperrefs in object descriptions for LaTeX.


Release 1.0 (Jul 23, 2010)
==========================

Incompatible changes
--------------------

* Support for domains has been added.  A domain is a collection of
  directives and roles that all describe objects belonging together,
  e.g. elements of a programming language.  A few builtin domains are
  provided:

  - Python
  - C
  - C++
  - JavaScript
  - reStructuredText

* The old markup for defining and linking to C directives is now
  deprecated.  It will not work anymore in future versions without
  activating the :mod:`~sphinx.ext.oldcmarkup` extension; in Sphinx
  1.0, it is activated by default.

* Removed support for old dependency versions; requirements are now:

  - docutils >= 0.5
  - Jinja2   >= 2.2

* Removed deprecated elements:

  - ``exclude_dirs`` config value
  - ``sphinx.builder`` module

Features added
--------------

* General:
